--- a/二叉树.html
+++ b/二叉树.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://my-cdns.github.io/cdn/assets/prism.css" />
+  <script src="https://my-cdns.github.io/cdn/assets/prism.js"></script>
 </head>
 <body>
   <h1>二叉树</h1>
@@ -27,7 +29,7 @@
   <div>二叉树的遍历要使用到 <strong>栈</strong> 和 <strong>队列</strong> 还有 <strong>递归</strong> 等</div>
 
   <pre>
-    <code>
+    <code class="language-javascript">
       // 树的节点表示
       {
         value: '',
@@ -39,7 +41,7 @@
   <div>(a+b*c)-d/e，该表达式用二叉树表示如图：</div>
   <img src="./二叉树.png" alt="" srcset="">
   <pre>
-    <code>
+    <code class="language-javascript">
       var tree = {
           value: "-",
           left: {
