--- a/斐波那契数列.html
+++ b/斐波那契数列.html
@@ -68,7 +68,7 @@
     </code>
   </pre>
   <h5>队列法</h5>
-  <div>如果采用数组存储的话，则可以打印出数列，并且不需要两个临时变量</div>
+  <div>借用额外数组，则可以打印出数列，并且不需要两个临时变量</div>
   <pre>
     <code>
       var fib = function(n) {
