--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>解题常用手法</h1>
   <ul>
     <li>双指针法</li>
     <li>动态规划</li>
@@ -16,6 +17,11 @@
     <li>先排序再双指针</li>
     <li>位运算，任何数与0异或是它自己，与它自己异或是0，满足交换律和结合律</li>
     <li>哈希表，记录次数，或者判断是否存在</li>
+  </ul>
+  <h1>题</h1>
+  <ul>
+    <li><a href="./斐波那契数列.html">斐波那契数列</a></li>
+    <li><a href="./删除排序数组中的重复项.html">删除排序数组中的重复项</a></li>
   </ul>
 </body>
 </html>
