--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <li><a href="./买卖股票的最佳时机2.html">买卖股票的最佳时机 II</a></li>
     <h5>动态规划</h5>
     <li><a href="./爬楼梯.html">爬楼梯</a></li>
+    <li><a href="./买卖股票的最佳时机1.html">买卖股票的最佳时机 I</a></li>
+    <li><a href="./最大子序和.html">最大子序和</a></li>
+    <li><a href="./打家劫舍.html">打家劫舍</a></li>
   </ul>
 </body>
 </html>
