--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <li><a href="./斐波那契数列.html">斐波那契数列</a></li>
     <li><a href="./删除排序数组中的重复项.html">删除排序数组中的重复项</a></li>
     <li><a href="./买卖股票的最佳时机2.html">买卖股票的最佳时机 II</a></li>
+    <li><a href="./旋转数组.html">旋转数组</a></li>
     <h5>动态规划</h5>
     <li><a href="./爬楼梯.html">爬楼梯</a></li>
     <li><a href="./买卖股票的最佳时机1.html">买卖股票的最佳时机 I</a></li>
