--- a/数组.html
+++ b/数组.html
@@ -12,7 +12,8 @@
       <li>借用新数组，遍历数组，判断是否在新数组中，在舍去，不在就推入新数组，计算新数组长度</li>
       <li>指针法：先将数组排序，然后 判断当前则和i + 1是否相等，是则跳过累加，否则标记 + 1 </li>
     </ul>
-    <h1>旋转数组 ， 数组中的元素向右移动 k 个位置 ,有可能k比length大</h1>
+    <h1>旋转数组 </h1>
+    <div>数组中的元素向右移动 k 个位置 ,有可能k比length大</div>
     <ul>
       <li>遍历，借用新数组， newindex = (oldindex + k) % length</li>
       <li>循环k次，每次都将第一个元素临时存起来，从数组尾部开始遍历（newindex = (oldindex+1) % length）然后将临时元素放入index = 1的地方</li>
@@ -22,6 +23,7 @@
     <h1>存在重复元素</h1>
     <ul>
       <li>借用新数组</li>
+      <li>使用Set  判断 Set.size === num.length</li>
       <li>双指针：先排序，再遍历判断 i 和 i+1 是否相等</li>
     </ul>
     <h1>只出现一次的数字，其余每个元素均出现两次</h1>
