--- a/删除排序数组中的重复项.html
+++ b/删除排序数组中的重复项.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1></h1>
+  <h1>删除排序数组中的重复项</h1>
   <div>给你一个 <strong>升序排列</strong> 的数组 nums ，请你 <strong>原地</strong> 删除重复出现的元素，使每个元素 只出现一次 ，返回删除后数组的新长度。元素的 相对顺序 应该保持 一致 。</div>
   <div>不要使用额外的空间，你必须在 <strong>原地 修改输入数组</strong> 并在使用 O(1) 额外空间的条件下完成。<strong>不改变数据长度length</strong></div>
   <h5>解法关键：双指针，单循环。时间复杂度：线性阶O(n)</h5>
